# BlackJack

./: .gitignore  BlackJack.bat  BlackJack.cpp  BlackJack.sln  BlackJack.vcxproj  BlackJack.vcxproj.filters  CMakeLists.txt  Game_scenarios.docx  README.md  cardsGeneration.cpp  cardsgeneration.h  constants.h  gameInput.cpp  gameInput.h  gameOutput.cpp  gameOutput.h  mainstructures.h  output.cpp  output.h  patterns.h  rules.txt
include/: cardsgeneration.h  mainstructures.h
src/: BlackJack.cpp  cardsGeneration.cpp  gameInput.cpp  gameOutput.cpp
